--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>sh.sharmarajdak</groupId>
 		<artifactId>spring-pet-clinic</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>pet-clinic-data</artifactId>
 	<name>pet-clinic-data</name>
@@ -65,8 +65,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>spring-pet-clinic-0.0.1</tag>
-  </scm>
 </project>
