--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -3,14 +3,14 @@
 	<parent>
 		<groupId>sh.sharmarajdak</groupId>
 		<artifactId>spring-pet-clinic</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>pet-clinic-web</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>sh.sharmarajdak</groupId>
 			<artifactId>pet-clinic-data</artifactId>
-			<version>0.0.1</version>
+			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -36,9 +36,4 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-
-  <scm>
-    <tag>spring-pet-clinic-0.0.1</tag>
-  </scm>
 </project>
