--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>sh.sharmarajdak</groupId>
 	<artifactId>spring-pet-clinic</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>spring-pet-clinic</name>
 	<description>Spring Pet Clinic</description>
@@ -42,7 +42,7 @@
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:sharmarajdaksh/spring-pet-clinic.git</developerConnection>
-	  <tag>spring-pet-clinic-0.0.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 	
 	<modules>
