--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>sh.sharmarajdak</groupId>
 		<artifactId>spring-pet-clinic</artifactId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>0.0.2</version>
 	</parent>
 	<artifactId>pet-clinic-data</artifactId>
 	<name>pet-clinic-data</name>
