--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -3,14 +3,14 @@
 	<parent>
 		<groupId>sh.sharmarajdak</groupId>
 		<artifactId>spring-pet-clinic</artifactId>
-		<version>0.0.2</version>
+		<version>0.0.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>pet-clinic-web</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>sh.sharmarajdak</groupId>
 			<artifactId>pet-clinic-data</artifactId>
-			<version>0.0.2</version>
+			<version>0.0.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
